@@ -3,6 +3,8 @@ WebHelpers ChangeLog
 
 tip (development version)
 -------------------------
+* webhelpers.html.tools:
+  - New helper ``js_obfuscate`` implements the old rails helper of the same name.
 
 1.0b2 (2009-12-21)
 ------------------
